# virtuoso-maestro

./: .dockerignore  .gitignore  CLAUDE.md  README.md  Walk-Forward Analysis and Time Series .md  backend.Dockerfile  bitbucket-pipelines.yml  deploy.sh  docker-compose.yaml  frontend.Dockerfile  prd.json  pyproject.toml  requirements-dev.txt  test.yaml
.github/workflows/: ci.yml
.ralph-tui/: config.toml
backend/: filos-dev.yaml  maestro-dev.yaml  maestro-prd.yaml  pyfolio_mock.py  requirements-v2.txt  requirements.txt  requirements_fixed.txt  requirements_modern.txt
backend/config/: config_reader.py
backend/datafeed/: rethinkdb_datafeed_builder.py
backend/datasource/: binance_batch_downloader.py  binance_batch_downloader_worker.py  bitmex_batch_downloader.py  bitmex_batch_downloader_worker.py  providers.py
backend/engine/: backtesting_engine.py  optimization_engine.py  optimizer.py  walk_forward_engine.py
backend/engine_v2/: __init__.py  strategy_adapter.py  vectorbt_engine.py  walk_forward_optuna.py
backend/logger/: logger_builder.py
backend/main/: data_binance_download.py  data_bitmex_download.py  rest_api.py
backend/schema/: bucketed_trade_data.py
backend/storage/: rethinkdb_storage_layer.py  storage_layer.py
backend/strategy/: __init__.py  advanced_strategies.py  base_strategy.py  bollinger_bands_strategy.py  channel_strategy.py  ema_cross_strategy.py  fernando_strategy.py  ichimoku_strategy.py  ma_cross_strategy.py  macd_strategy.py  macd_strategyx.py  rsi_strategy.py  scalping_strategies.py
backend/tests/: test_engine_v2.py
backend/utils/: fractional_commission.py  time_series_split_rolling.py
docs/: BRANDING.md  README.md
docs/architecture/: CONSENSUS_MATRIX.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_V2.md  MODERNIZATION.md  PIPELINE.md
frontend/filosui/: package-lock.json  (+1 more)
(+19 files in other folders)
