[project]
name = "maestro"
version = "0.1.0"
description = "Quantitative trading platform for algorithmic strategy development, backtesting, and walk-forward optimization"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".git",
    ".github",
    "__pycache__",
    "venv",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
    "backend/venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip without strict
    "E402",  # module level import not at top of file
    "F401",  # unused imports (may be intentional re-exports)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"backend/tests/*" = ["B", "C4"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "venv",
    "backend/venv",
    "build",
    "dist",
]

[tool.black]
line-length = 120
target-version = ["py311"]
exclude = '''
/(
    \.git
    | \.github
    | __pycache__
    | venv
    | \.venv
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip = ["venv", ".venv", "backend/venv"]
